Add input from @murraythom

--- a/01-diverse-solutions.ipynb
+++ b/01-diverse-solutions.ipynb
@@ -13,6 +13,10 @@
     "3. [Analysis with Hamming Distance](#Analysis-with-Hamming-Distance) demonstrates a simple tool for analyzing solutions.\n",
     "3. [Analysis with Autocorrelation](#Analysis-with-Autocorrelation) explains a more powerful tool, autocorrelation, and demonstrates its use through a comparison of results between the newer and previous generation of QPUs.\n",
     "\n",
+    "The D-Wave quantum computer solves binary quadratic models (BQM), the Ising model traditionally used in statistical mechanics and its computer-science equivalent, the quadratic unconstrained binary optimization (QUBO) problem. These formulations can express a wide range of hard optimization and constraint satisfaction problems, for example, such as job-shop scheduling, protein folding, and traffic-flow optimization. \n",
+    "\n",
+    "For applications in such fields to be successful may require diverse solutions, which enable the application to respond to changes in the environment (problem conditions). Additionally, a diverse set of solutions may reflect and enable analysis of structural characteristics of the problem. \n",
+    "\n",
     "For the basics of solving problems on a quantum computer, see [Ocean Software documentation](https://docs.ocean.dwavesys.com/en/latest/). For more detailed information on posing problems and improving solutions, see [D-Wave Problem-Solving Handbook](https://docs.dwavesys.com/docs/latest/doc_handbook.html). "
    ]
   },
@@ -32,7 +36,7 @@
     "\n",
     "The D-Wave system keeps the QPU at a temperature below 15 mK (near absolute zero) and employs advanced radio frequency (RF) and  magnetic shielding against electromagnetic interference. However, the chip itself&mdash;for example, electrons in the chip wires&mdash;is a source of noise. The new generation of QPUs improves the isolation of the qubits from noise originating in the chip itself.\n",
     "\n",
-    "A recent whitepaper, Improved coherence leads to gains in quantum annealing performance NEED LINK, demonstrates a 25x performance improvement in the lower-noise QPU for the spin glass problems of D-Wave's [2018 Science article](https://science.sciencemag.org/content/361/6398/162.full.pdf). \n",
+    "How does D-Wave's technological progress in fabricating qubits affect applications solving real-world problems? A recent whitepaper, Improved coherence leads to gains in quantum annealing performance NEED LINK, demonstrates a 25x performance improvement in the lower-noise QPU for the spin glass problems of D-Wave's [2018 Science article](https://science.sciencemag.org/content/361/6398/162.full.pdf). \n",
     "\n",
     "You can learn more about D-Wave's lower noise technology in Probing Mid-Band and Broad-Band Noise in Lower-Noise D-Wave 2000Q Fabrication Stacks NEED LINK. "
    ]
