--- a/01-diverse-solutions.ipynb
+++ b/01-diverse-solutions.ipynb
@@ -13,7 +13,7 @@
     "3. [Analysis with Hamming Distance](#Analysis-with-Hamming-Distance) demonstrates a simple tool for analyzing solutions.\n",
     "3. [Analysis with Autocorrelation](#Analysis-with-Autocorrelation) explains a more powerful tool, autocorrelation, and demonstrates its use through a comparison of results between the newer and previous generation of QPUs.\n",
     "\n",
-    "The D-Wave quantum computer solves binary quadratic models (BQM), the Ising model traditionally used in statistical mechanics and its computer-science equivalent, the quadratic unconstrained binary optimization (QUBO) problem. These formulations can express a wide range of hard optimization and constraint satisfaction problems, for example, such as job-shop scheduling, protein folding, and traffic-flow optimization. \n",
+    "The D-Wave quantum computer solves binary quadratic models (BQM), the Ising model traditionally used in statistical mechanics and its computer-science equivalent, the quadratic unconstrained binary optimization (QUBO) problem. These formulations can express a [wide range](https://arxiv.org/abs/1302.5843) of hard optimization and constraint satisfaction problems, for example, such as job-shop scheduling, protein folding, and traffic-flow optimization. \n",
     "\n",
     "For applications in such fields to be successful may require diverse solutions, which enable the application to respond to changes in the environment (problem conditions). Additionally, a diverse set of solutions may reflect and enable analysis of structural characteristics of the problem. \n",
     "\n",
@@ -36,17 +36,19 @@
     "\n",
     "The D-Wave system keeps the QPU at a temperature below 15 mK (near absolute zero) and employs advanced radio frequency (RF) and  magnetic shielding against electromagnetic interference. However, the chip itself&mdash;for example, electrons in the chip wires&mdash;is a source of noise. The new generation of QPUs improves the isolation of the qubits from noise originating in the chip itself.\n",
     "\n",
-    "How does D-Wave's technological progress in fabricating qubits affect applications solving real-world problems? A recent whitepaper, Improved coherence leads to gains in quantum annealing performance NEED LINK, demonstrates a 25x performance improvement in the lower-noise QPU for the spin glass problems of D-Wave's [2018 Science article](https://science.sciencemag.org/content/361/6398/162.full.pdf). \n",
+    "How does D-Wave's technological progress in fabricating qubits affect applications solving real-world problems? A recent whitepaper, *Improved coherence leads to gains in quantum annealing performance*, demonstrates a 25x performance improvement in the lower-noise QPU for the spin-glass problems of D-Wave's [2018 Science article](https://science.sciencemag.org/content/361/6398/162.full.pdf).\n",
     "\n",
-    "You can learn more about D-Wave's lower noise technology in Probing Mid-Band and Broad-Band Noise in Lower-Noise D-Wave 2000Q Fabrication Stacks NEED LINK. "
+    "<img src='images/lattice-over-processor_1600x1200.png' width=300x>\n",
+    "\n",
+    "You can learn more about D-Wave's lower noise technology in the whitepaper *Probing Mid-Band and Broad-Band Noise in Lower-Noise D-Wave 2000Q Fabrication Stacks*. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Availability of the Technology\n",
-    "This subsection checks whether you have access to the latest-generation solver by querying solver property `lower_noise`---see the [Solver Properties and Parameters book](https://docs.dwavesys.com/docs/latest/doc_solver_ref.html) for a description of QPU properties.\n",
+    "## Solver Availability\n",
+    "This subsection checks whether you have access to the latest-generation solver by querying solver property `lower_noise`---see the [Solver Properties and Parameters guide](https://docs.dwavesys.com/docs/latest/doc_solver_ref.html) for a description of QPU properties.\n",
     "\n",
     "The cell below uses Ocean software's [dwave-system](https://docs.ocean.dwavesys.com/projects/system/) *DWaveSampler()* to set up two connections to D-Wave solvers, one of which is to a lower-noise QPU."
    ]
@@ -77,9 +79,9 @@
    "metadata": {},
    "source": [
     "# Basic Solution Analysis\n",
-    "The standard practice in solving problems on a quantum computer includes multiple reads&mdash;quantum computers are probabilistic so it's essential to request multiple samples. Often the best (lowest-energy) answer is sufficient. \n",
+    "The standard practice in solving problems on a quantum computer includes multiple reads&mdash;quantum computers are probabilistic so it's essential to request multiple samples. For some problems, the best (lowest-energy) answer is sufficient. \n",
     "\n",
-    "This section demonstrates some basic analysis to better understand the results."
+    "This section demonstrates some basic analysis to help you better understand and possibly improve solutions returned from the D-wave quantum computer."
    ]
   },
   {
@@ -87,15 +89,14 @@
    "metadata": {},
    "source": [
     "## A Small Random (RAN1) Problem\n",
-    "For simplicity, this section solves a small RAN1 problem: a graph with all node biases set to zero and all interactions assigned $\\pm 1$ with uniform distribution. Such a problem might represent an expansion of the well-known [maximum cut](https://en.wikipedia.org/wiki/Maximum_cut) NP-hard graph problem or the problem of estimating structural imbalance for real-world social networks demonstrated in the [structural imbalance demo](https://cloud.dwavesys.com/leap/demos/socialnetwork/) and its accompanying Jupyter Notebook. \n",
+    "For simplicity, this section solves a small RAN1 problem: a graph with all node biases set to zero and all edge weights assigned $\\pm 1$ with uniform distribution. Such a problem might represent an expansion of the well-known [maximum cut](https://en.wikipedia.org/wiki/Maximum_cut) NP-hard graph problem or the problem of estimating structural imbalance for real-world social networks demonstrated in the [structural imbalance demo](https://cloud.dwavesys.com/leap/demos/socialnetwork/) and its accompanying Jupyter Notebook. \n",
     "\n",
-    "The next cell uses a NetworkX graph generator that returns a random graph with 16 nodes of degree 3. Ocean software's [dimod](https://docs.ocean.dwavesys.com/projects/dimod) converts it to a binary quadratic model (BQM) of the RAN1 problem for the D-Wave system to minimize: \n",
+    "The next cell uses a NetworkX graph generator that returns a random graph with 16 nodes of degree 3. Ocean software's [dimod](https://docs.ocean.dwavesys.com/projects/dimod) uses it to create a RAN1 problem. Because node biases, represented by coefficients $h_i$, are zero, the linear term of the Ising formulation, $\\sum_{i=1}^N h_i s_i$, is zero. To solve the RAN1 problem the D-Wave system minimizes \n",
     "\n",
-    "  $\\sum_{i=1}^N h_i s_i +\n",
-    "  \\sum_{i<j}^N J_{i,j} s_i s_j$,\n",
+    "  $\\sum_{i<j}^N J_{i,j} s_i s_j$,\n",
     "\n",
     "\n",
-    "where linear coefficients, $h_i$, are set to zeros, quadratic coefficients, $J_{i,j}$, are set to $\\pm 1$, and spin variable $s_i$ can have values $-1$ or $+1$."
+    "where quadratic coefficients, $J_{i,j}$, representing the graph edge values, are set to $\\pm 1$ and the solution's spin variables $s_i$ can have values $-1$ or $+1$."
    ]
   },
   {
@@ -163,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One typical way to examine results is to check the number of occurrences of lowest-energy solutions. RAN1 problems with more than a few variables can have many solutions (ground states), so you may see single occurrences of many solutions. \n",
+    "One typical way to examine results is to check the number of occurrences of the best solutions (those with lowest energy in the Ising formulation). RAN1 problems with more than a few variables can have many solutions (corresponding to multiple ground states of the Ising formulation), so you may see single occurrences of many solutions rather than multiple occurrences of a small number of solutions. \n",
     "\n",
     "An energy plot is an easy way to quickly visualize the quality of solutions. "
    ]
@@ -186,7 +187,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can rerun the problem while varying parameters and see if your solutions can be improved: raise the number of reads, change the `annealing_time`, set `num_spin_reversal_transforms`, etc. See a list of parameters in the [system documentation](https://docs.dwavesys.com/docs/latest/doc_solver_ref.html) and learn about using them in the [D-Wave Problem-Solving Handbook](https://docs.dwavesys.com/docs/latest/doc_handbook.html).\n",
+    "You can rerun the problem while varying parameters and see if your solutions can be improved; for example: \n",
+    " \n",
+    "* increase the `annealing_time` \n",
+    "* set `num_spin_reversal_transforms` \n",
+    "\n",
+    "Typically for even a slightly larger graph problem, such as `nx.random_regular_graph(5, 16)`, you should see differences over a small number of reruns. For larger and harder problems, increasing `num_reads` might enable you to find a useful solution. See a list of configurable parameters in the [system documentation](https://docs.dwavesys.com/docs/latest/doc_solver_ref.html) and learn about using them in the [D-Wave Problem-Solving Handbook](https://docs.dwavesys.com/docs/latest/doc_handbook.html).\n",
     "\n",
     "Automatically embedding a problem on the QPU is heuristic and usually includes representing some variables with multiple qubits (a \"chain\"). Chain length can strongly affect solution quality. You can try rerunning the problem to obtain a better embedding or directly use Ocean software's [minorminer](https://docs.ocean.dwavesys.com/projects/minorminer) embedding tool to improve the embedding. \n",
     "\n",
@@ -313,9 +319,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Typically, the lower-noise QPU explores more of the solution landscape for such a problem, so for most runs you see higher Hamming distances. \n",
+    "Typically, the lower-noise QPU explores more of the solution landscape for such a problem; for most runs you see higher Hamming distances. \n",
     "\n",
-    "Due to the probabilistic nature of quantum computers, it can happen that low-probability solutions are returned for some problem submissions. How do you reduce the likelihood of mistaking these as representative samples for your problem? First, try to always set high numbers of reads. The cost of increasing the number of reads is usually not a significant part of the overall solution budget (time to prepare, submit, solve, and translate back to problem space). Here, 1000 reads are requested. "
+    "Due to the probabilistic nature of quantum computers, it can happen that low-probability solutions are returned for some problem submissions. How do you reduce the likelihood of mistaking these as representative samples for your problem? Try to always set high numbers of reads. The cost of increasing the number of reads is usually not a significant part of the overall solution budget (time to prepare, submit, solve, and translate back to problem space). Here, 1000 reads are requested. "
    ]
   },
   {
@@ -323,14 +329,14 @@
    "metadata": {},
    "source": [
     "# Analysis with Autocorrelation\n",
-    "You do not need a deep understanding of [Autocorrelation](https://en.wikipedia.org/wiki/Autocorrelation) to understand this section and make use of the demonstrated methods. For the purpose of this section it's enough to know that it is a formula that can find patterns in signals; for example, a word in a stream of audio. This means that it can provide information on the randomness of a time series of samples. In general, autocorrelation on a signal, $y(t)$ produces a series of $k$ values, each of which represents the sum of the signal multiplied by a shifted copy of itself, $y(t+k)$. \n",
+    "You do not need a deep understanding of [Autocorrelation](https://en.wikipedia.org/wiki/Autocorrelation) to understand this section and make use of the demonstrated methods. For the purpose of this section it's enough to know that it is a formula that can find patterns in signals; for example, a word in a stream of audio. This means that it can provide information on the randomness of a time series of samples. In general, autocorrelation on a signal, $y(t)$, produces a series of $k$ values, each of which represents the sum of the signal multiplied by a shifted copy of itself, $y(t+k)$. \n",
     "\n",
-    "This section provides a simple example of autocorrelation to help you form an  intuitive grasp of its results sufficient for basic analysis of samples. It then demonstrates its use on solutions returned from two D-Wave systems. You can then use the tool to gain insight into the quality of your solutions. \n",
+    "This section provides a simple example of autocorrelation to help you form an  intuitive grasp of its results that is sufficient for basic analysis of samples. It then demonstrates its use on solutions returned from two D-Wave systems. You can use the tool to gain insight into the quality of your solutions. \n",
     "\n",
-    "`autocorrelate` below defines a function for autocorrelation based on [NumPy's correlate function](https://docs.scipy.org/doc/numpy/index.html). It calculates two values of interest:\n",
+    "The `autocorrelate` function defined below uses [NumPy's correlate function](https://docs.scipy.org/doc/numpy/index.html) to calculates two values of interest:\n",
     "\n",
-    "* `ac1`: autocorrelation for a time lag of 1. This value represents the multiplication of the signal by a copy of itself shifted by one time unit (here a shift of one sample). This time lag typically represents a significant part of the predictivity of the past's influence on the signal's current value; i.e. it expresses the likelihood that the current sample repeats the previous one, at least partly. This is shown below in this section. \n",
-    "* `ac0`: autocorrelation for all time lags with the value for zero lag removed (the function used here normalizes the input signal and at zero lag a normalized signal multiplied by itself always has a value of one)."
+    "* `ac1`: autocorrelation for a time lag of 1. This value represents the multiplication of the signal by a copy of itself shifted by one time unit (here a shift of one sample). This value of the autocorrelation series typically represents a significant part of the predictivity of the past's influence on the signal's current value; i.e. it expresses the likelihood that the current sample repeats the previous one, at least partly. This is shown below in this section. \n",
+    "* `ac0`: autocorrelation for all time lags with the value for zero lag removed (the function defined here normalizes the input signal&mdash;at zero lag a normalized signal multiplied by itself always has a value of one)."
    ]
   },
   {
@@ -362,7 +368,7 @@
    "metadata": {},
    "source": [
     "## A Simple Example\n",
-    "This subsection uses the autocorrelation function on three simple signals to provide intuition on the results you can expect to see from applying it to results of your problem. \n",
+    "This subsection uses the autocorrelation function on three simple signals to provide intuition on what you might learn by applying it to solutions of your problem. \n",
     "\n",
     "The three signals are:\n",
     "\n",
