Add references and update some descriptions

--- a/01-diverse-solutions.ipynb
+++ b/01-diverse-solutions.ipynb
@@ -36,11 +36,11 @@
     "\n",
     "The D-Wave system keeps the QPU at a temperature below 15 mK (near absolute zero) and employs advanced radio frequency (RF) and  magnetic shielding against electromagnetic interference. However, the chip itself&mdash;for example, electrons in the chip wires&mdash;is a source of noise. The new generation of QPUs improves the isolation of the qubits from noise originating in the chip itself.\n",
     "\n",
-    "How does D-Wave's technological progress in fabricating qubits affect applications solving real-world problems? A recent whitepaper, *Improved coherence leads to gains in quantum annealing performance*, demonstrates a 25x performance improvement in the lower-noise QPU for the spin-glass problems of D-Wave's [2018 Science article](https://science.sciencemag.org/content/361/6398/162.full.pdf).\n",
+    "How does D-Wave's technological progress in fabricating qubits affect applications solving real-world problems? A recent whitepaper, [Improved coherence leads to gains in quantum annealing performance](https://www.dwavesys.com/sites/default/files/14-1037A-A_Improved_coherence_leads_to_gains_QA_performance.pdf), demonstrates a 25x performance improvement in the lower-noise QPU for the spin-glass problems of D-Wave's [2018 Science article](https://science.sciencemag.org/content/361/6398/162.full.pdf).\n",
     "\n",
     "<img src='images/lattice-over-processor_1600x1200.png' width=300x>\n",
     "\n",
-    "You can learn more about D-Wave's lower noise technology in the whitepaper *Probing Mid-Band and Broad-Band Noise in Lower-Noise D-Wave 2000Q Fabrication Stacks*. "
+    "You can learn more about D-Wave's lower noise technology in the whitepaper [Probing Mid-Band and Broad-Band Noise in Lower-Noise D-Wave 2000Q Fabrication Stacks](https://www.dwavesys.com/sites/default/files/14-1034A-A_Probling_noise_in_LN_2000Q_fabrication_stacks.pdf). "
    ]
   },
   {
@@ -79,7 +79,7 @@
    "metadata": {},
    "source": [
     "# Basic Solution Analysis\n",
-    "The standard practice in solving problems on a quantum computer includes multiple reads&mdash;quantum computers are probabilistic so it's essential to request multiple samples. For some problems, the best (lowest-energy) answer is sufficient. \n",
+    "The standard practice in solving problems on a quantum computer includes multiple reads&mdash;quantum computers are probabilistic so it's essential to request multiple samples. For some problems, the best answer returned is sufficient. \n",
     "\n",
     "This section demonstrates some basic analysis to help you better understand and possibly improve solutions returned from the D-wave quantum computer."
    ]
@@ -96,7 +96,7 @@
     "  $\\sum_{i<j}^N J_{i,j} s_i s_j$,\n",
     "\n",
     "\n",
-    "where quadratic coefficients, $J_{i,j}$, representing the graph edge values, are set to $\\pm 1$ and the solution's spin variables $s_i$ can have values $-1$ or $+1$."
+    "where $N$ is the number of nodes, quadratic coefficients, $J_{i,j}$, representing the graph edge values, are set to $\\pm 1$ and the solution's spin variables $s_i$ can have values $-1$ or $+1$."
    ]
   },
   {
@@ -156,7 +156,6 @@
     "result = {}\n",
     "result['QPU'] = EmbeddingComposite(sampler_qpu).sample(bqm, num_reads=num_reads, answer_mode='raw')\n",
     "\n",
-    "#print(\"Values of 5 variables in the best solution found: {}\".format(list(result['QPU'].first.sample.values())[0:5]))\n",
     "print(\"Best solution found: {}\".format(result['QPU'].first.sample))"
    ]
   },
@@ -234,7 +233,7 @@
     "\n",
     "<img src='images/hamming.jpg' width=700x> \n",
     "\n",
-    "For example, apply the Hamming-distance function to a 4-bit series with increasing numbers of bit flips: "
+    "To see a simple example, apply the Hamming-distance function to a 4-bit series with increasing numbers of bit flips: "
    ]
   },
   {
@@ -257,7 +256,7 @@
     "### A Larger RAN1 Problem\n",
     "As noted in the previous section, minor-embedding can significantly affect solution quality. The example in this section creates a large RAN1 problem that is identical on two QPUs. \n",
     "\n",
-    "It first creates a graph, `graph_cn16_shared`, that represents the nodes and edges common to both QPUs' working graphs. Each QPU has a slightly different graph from the canonical Chimera or Pegasus graphs that structure D-Wave QPU qubits (due to fabrication yields that are typically slightly lower than 100%). It then creates a smaller graph, `graph_cn5_shared`, using only the common nodes and edges, for a selected lattice size of Chimera unit tiles: CN5 represents a five by five lattice. The common CN5 graphs are represented for the QPUs by Ocean software's [dimod](https://docs.ocean.dwavesys.com/projects/dimod) *StructureComposite*."
+    "It first creates a graph, `graph_cn16_shared`, that represents the nodes and edges common to both QPUs' working graphs. Each QPU has a slightly different graph from the canonical Chimera or Pegasus graphs that structure D-Wave QPU qubits (due to fabrication yields that are typically slightly lower than 100%). Using only these common nodes and edges, it then creates a smaller graph, `graph_cn5_shared`, for a selected number of Chimera unit tiles: CN5 represents a five by five lattice. Ocean software's [dimod](https://docs.ocean.dwavesys.com/projects/dimod) *StructureComposite* represents the QPUs as sampler with the shared CN5 graph."
    ]
   },
   {
@@ -372,9 +371,9 @@
     "\n",
     "The three signals are:\n",
     "\n",
-    "* A sine function: this is the quintessential repetitive pattern. With minimal amplitude measurements of such a signal, you can accurately predict future measurement. Autocorrelation is expected to return a high value.\n",
-    "* A random signal of uniformly selected $\\pm 1$ values. This signal should ideally return zero autocorrelation; regardless of how long you measure it, you cannot accurately predict the next value. In reality, it returns low autocorrelation because given a finite signal of sufficient length, random data can be interpreted as being part of some repetitive pattern.\n",
-    "* A weighted pseudo-random signal, where bit $i$ depends to a high degree on bit $i-1$ and to a lower degree on bit $i-2$. This signal falls in between the previous two in its degree of randomness. Following subsections will show that such a signal can be helpfully used as a mental model for some behavior of returned samples.    "
+    "* Sine function. For this signal&mdash;the quintessential repetitive pattern&mdash;you can accurately predict future values after minimal amplitude measurements. Autocorrelation is expected to return a high value.\n",
+    "* Random signal of uniformly selected $\\pm 1$ values. This signal should ideally return zero autocorrelation; regardless of how long you measure it, you cannot accurately predict the next value. In reality, it returns low autocorrelation because given a finite signal of sufficient length, random data can be interpreted as being part of some repetitive pattern.\n",
+    "* Weighted pseudo-random signal, where bit $i$ depends to a high degree on bit $i-1$ and to a lower degree on bit $i-2$. This signal falls in between the previous two in its degree of randomness. Following subsections will show that such a signal can be helpfully used as a mental model for some behavior of returned samples.    "
    ]
   },
   {
@@ -391,7 +390,7 @@
     "     x_weighted_rand.append(np.random.choice([1, -1], 1, p=[0.5 + 0.4*x_weighted_rand[t-1] + 0.05*x_weighted_rand[t-2], \n",
     "                                                            0.5 - 0.4*x_weighted_rand[t-1] - 0.05*x_weighted_rand[t-2]])\n",
     "                                                            .item())\n",
-    "signals = {'Sine': x_sin, 'Random': x_rand, 'Weighted Quasirandom': x_weighted_rand}"
+    "signals = {'Sine': x_sin, 'Random': x_rand, 'Weighted Pseudorandom': x_weighted_rand}"
    ]
   },
   {
@@ -429,7 +428,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note the difference in the results between the random and weighted quasi-random signal. Such a difference is the focus of the next examples that examine samples from the two generations of QPU."
+    "Note the difference in the results between the random and weighted pseudo-random signal. Such a difference is the focus of the next examples that examine samples from the two generations of QPU."
    ]
   },
   {
@@ -475,7 +474,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot the results."
+    "Plot the results. Black lines represent averages across all variables."
    ]
   },
   {
@@ -492,9 +491,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Typically, over many RAN1 problems, the lower-noise QPU shows lower autocorrelation. Similar to the weighted quasi-random signal of the first subsection, variables have a slight tendency to repeat the values of the previous sample. This is partly due to the qubits, which represent the problem variables, being realized in a physical (real-world, noisy) device. The qubits in D-Wave's lower-noise QPU act more like ideal qubits.\n",
+    "Typically, over many RAN1 problems, the lower-noise QPU shows lower autocorrelation. Similar to the weighted pseudo-random signal of the first subsection, variables have a slight tendency to repeat the values of the previous sample. This is partly due to the qubits, which represent the problem variables, being realized in a physical (real-world, noisy) device. The qubits in D-Wave's lower-noise QPU act more like ideal qubits.\n",
     "\n",
-    "However, with RAN1 problems it is difficult to know whether a particular variable's higher likelihood of repeating its previous state is due to outside influence or to that state being part of a good solution to the problem. If you run a simple problem such as that of the [Basic Solution Analysis](#Basic-Solution-Analysis) section with a small number of variables and many reads (samples), variable values repeat because the QPU correctly returns its small set of solutions. "
+    "However, with RAN1 problems it is difficult to know whether a particular variable's higher likelihood of repeating its previous state is due to such outside influence or to that state being part of a good solution to the problem. If you run a simple problem such as that of the [Basic Solution Analysis](#Basic-Solution-Analysis) section with a small number of variables and many reads (samples), variable values repeat because the QPU correctly returns the problem's small set of solutions. "
    ]
   },
   {
@@ -517,7 +516,7 @@
     "\n",
     "<img src='images/shared_graph.png' width=500x/>\n",
     "\n",
-    "Use the previously calculated CN16-sized graph of nodes and edges common to both QPUs, `graph_cn16_shared`, and previously instantiated *StructureComposite* samplers, to embed each copy of the 8-qubit problem in Chimera tiles with full yield in both systems (that is, to solve the problem on tiles that have all active qubits in both the QPUs)."
+    "Use the previously calculated CN16-sized graph of nodes and edges common to both QPUs, `graph_cn16_shared`, and previously instantiated *StructureComposite* samplers, to embed copies of the 8-qubit problem in Chimera tiles with full yield in both systems (that is, to solve the problem on tiles that have all active qubits in both the QPUs)."
    ]
   },
   {
@@ -586,9 +585,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, plot average autocorrelation values across all solutions for a selected number, `time_lags`, of shifts. Bars represent standard deviation. A marker shows the average `ac1` value. \n",
+    "Next, plot average autocorrelation values for a selected number, `time_lags`, of shifts. Bars represent standard deviation across all solutions. A marker shows the average `ac1` value. \n",
     "\n",
-    "Notice the resemblance to the weighted quasi-random signal of the previous subsection, which gave a higher weight to the directly preceding value and a lower weight to the value preceding that one. The state of the variables (qubits) in a sample has some dependence on the previous state and even some, but much less, on earlier states, with past influence dropping strongly with time."
+    "Notice the resemblance to the weighted pseudo-random signal of the previous subsection, which gave a higher weight to the directly preceding value and a lower weight to the value preceding that one. The state of the variables (qubits) in a sample has some dependence on the previous state and even some, but much less, on earlier states, with past influence dropping strongly with time."
    ]
   },
   {
@@ -617,7 +616,7 @@
    "source": [
     "The system provides ways to reduce autocorrelation on the previous generation of QPUs too; for example, you can set QPU parameter `reduce_intersample_correlation` to True. \n",
     "\n",
-    "The next code cells submit the same RAN1 BQM twice to the QPU and calculate the average autocorrelation on some selected number of variables, `num_variables`, for `reduce_intersample_correlation` set to True (RIC ON) and False (RIC OFF)."
+    "The next code cells submit the same RAN1 twice to the QPU and calculate the average autocorrelation on some selected number of variables, `num_variables`, for `reduce_intersample_correlation` set to True (RIC ON) and False (RIC OFF)."
    ]
   },
   {
@@ -689,7 +688,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Runs the same RAN1 problem and see autocorrelation of variables, for a selected number of variables, for several different values of the `readout_thermalization` parameter."
+    "Rerun the same problem and compare autocorrelation on a selected number of variables for different values of the `readout_thermalization` parameter."
    ]
   },
   {
@@ -716,7 +715,9 @@
    "source": [
     "Typically, for longer `readout_thermalization` settings, solutions have lower autocorrelation.\n",
     "\n",
-    "Try experimenting with the methods demonstrated in this notebook. There are additional methods to improve solutions and best practices you should be familiar with. For more detailed information on posing problems and improving solutions, see  the [D-Wave Problem-Solving Handbook](https://docs.dwavesys.com/docs/latest/doc_handbook.html)."
+    "Try experimenting with the methods demonstrated in this notebook. There are additional methods to improve solutions and best practices you should be familiar with. For more detailed information on posing problems and improving solutions, see  the [D-Wave Problem-Solving Handbook](https://docs.dwavesys.com/docs/latest/doc_handbook.html).\n",
+    "\n",
+    "For an example of improved performance on the lower-noise QPU, see the whitepaper [Improved coherence leads to gains in quantum annealing performance](https://www.dwavesys.com/sites/default/files/14-1037A-A_Improved_coherence_leads_to_gains_QA_performance.pdf)."
    ]
   }
  ],
