Push QA version

--- a/01-diverse-solutions.ipynb
+++ b/01-diverse-solutions.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Diverse Solutions (Using a Lower-Noise QPU)\n",
     "\n",
-    "This notebook makes use of D-Wave's 2019 breakthrough in quantum device fabrication&mdash;its lower-noise technology for the quantum processing unit (QPU)&mdash;to provide some tools and demonstrate techniques that can help you better solve problems on the D-Wave quantum computer.\n",
+    "This notebook makes use of D-Wave's 2019 breakthrough in quantum device fabrication&mdash;its lower-noise technology for the quantum processing unit (QPU)&mdash;to provide some tools and demonstrate techniques that can help your quantum applications find better, more robust solutions to hard problems.\n",
     "\n",
     "1. [Lower-Noise QPU](#Lower-Noise-QPU) gives a basic explanation of what noise is reduced in newer-generation QPUs.\n",
     "2. [Basic Solution Analysis](#Basic-Solution-Analysis) shows some quick and simple ways to examine problem solutions. \n",
@@ -32,7 +32,7 @@
    "metadata": {},
    "source": [
     "# Lower-Noise QPU\n",
-    "Quantum computers exploit such quantum phenomena as entanglement and tunneling to speed up the search for solutions to hard problems. Quantum states are highly susceptible to interaction with the environment&mdash;qubits require a high degree of isolation from the surrounding. \n",
+    "Quantum computers exploit such quantum phenomena as entanglement and tunneling to speed up the search for solutions to hard problems. Quantum states are highly susceptible to interaction with the environment&mdash;qubits require isolation from their surroundings. \n",
     "\n",
     "The D-Wave system keeps the QPU at a temperature below 15 mK (near absolute zero) and employs advanced radio frequency (RF) and  magnetic shielding against electromagnetic interference. However, the chip itself&mdash;for example, electrons in the chip wires&mdash;is a source of noise. The new generation of QPUs improves the isolation of the qubits from noise originating in the chip itself.\n",
     "\n",
@@ -40,7 +40,7 @@
     "\n",
     "<img src='images/lattice-over-processor_1600x1200.png' width=300x>\n",
     "\n",
-    "You can learn more about D-Wave's lower noise technology in the whitepaper [Probing Mid-Band and Broad-Band Noise in Lower-Noise D-Wave 2000Q Fabrication Stacks](https://www.dwavesys.com/sites/default/files/14-1034A-A_Probling_noise_in_LN_2000Q_fabrication_stacks.pdf). "
+    "You can learn more about D-Wave's lower-noise technology in the whitepaper [Probing Mid-Band and Broad-Band Noise in Lower-Noise D-Wave 2000Q Fabrication Stacks](https://www.dwavesys.com/sites/default/files/14-1034A-A_Probling_noise_in_LN_2000Q_fabrication_stacks.pdf). "
    ]
   },
   {
@@ -81,7 +81,7 @@
     "# Basic Solution Analysis\n",
     "The standard practice in solving problems on a quantum computer includes multiple reads&mdash;quantum computers are probabilistic so it's essential to request multiple samples. For some problems, the best answer returned is sufficient. \n",
     "\n",
-    "This section demonstrates some basic analysis to help you better understand and possibly improve solutions returned from the D-wave quantum computer."
+    "This section demonstrates some basic analysis to help you better understand and possibly improve solutions returned from the D-Wave quantum computer."
    ]
   },
   {
@@ -91,7 +91,7 @@
     "## A Small Random (RAN1) Problem\n",
     "For simplicity, this section solves a small RAN1 problem: a graph with all node biases set to zero and all edge weights assigned $\\pm 1$ with uniform distribution. Such a problem might represent an expansion of the well-known [maximum cut](https://en.wikipedia.org/wiki/Maximum_cut) NP-hard graph problem or the problem of estimating structural imbalance for real-world social networks demonstrated in the [structural imbalance demo](https://cloud.dwavesys.com/leap/demos/socialnetwork/) and its accompanying Jupyter Notebook. \n",
     "\n",
-    "The next cell uses a NetworkX graph generator that returns a random graph with 16 nodes of degree 3. Ocean software's [dimod](https://docs.ocean.dwavesys.com/projects/dimod) uses it to create a RAN1 problem. Because node biases, represented by coefficients $h_i$, are zero, the linear term of the Ising formulation, $\\sum_{i=1}^N h_i s_i$, is zero. To solve the RAN1 problem the D-Wave system minimizes \n",
+    "The next cell uses a NetworkX graph generator that returns a random graph with 16 nodes of degree 3. Ocean software's [dimod](https://docs.ocean.dwavesys.com/projects/dimod) uses it to create a RAN1 problem. Because node biases are zero, in its Ising formulation submitted to the quantum computer, $\\sum_{i=1}^N h_i s_i + \\sum_{i<j}^N J_{i,j} s_i s_j$, coefficients $h_i$ are set to zero. To solve the RAN1 problem the D-Wave system minimizes the remaining right-hand term, \n",
     "\n",
     "  $\\sum_{i<j}^N J_{i,j} s_i s_j$,\n",
     "\n",
@@ -191,7 +191,7 @@
     "* increase the `annealing_time` \n",
     "* set `num_spin_reversal_transforms` \n",
     "\n",
-    "Typically for even a slightly larger graph problem, such as `nx.random_regular_graph(5, 16)`, you should see differences over a small number of reruns. For larger and harder problems, increasing `num_reads` might enable you to find a useful solution. See a list of configurable parameters in the [system documentation](https://docs.dwavesys.com/docs/latest/doc_solver_ref.html) and learn about using them in the [D-Wave Problem-Solving Handbook](https://docs.dwavesys.com/docs/latest/doc_handbook.html).\n",
+    "Typically for even a slightly larger graph problem, such as `nx.random_regular_graph(5, 16)`, you should see differences over a small number of reruns. For larger and harder problems, increasing `num_reads` might enable you to find a useful solution. See a list of configurable parameters in the [system documentation](https://docs.dwavesys.com/docs/latest/doc_solver_ref.html) and learn about using them in the [D-Wave Problem-Solving Handbook](https://docs.dwavesys.com/docs/latest/doc_handbook.html). Depending on the requirements of your particular application, select parameters that produce good, robust solutions within your constraints on time, memory, etc. \n",
     "\n",
     "Automatically embedding a problem on the QPU is heuristic and usually includes representing some variables with multiple qubits (a \"chain\"). Chain length can strongly affect solution quality. You can try rerunning the problem to obtain a better embedding or directly use Ocean software's [minorminer](https://docs.ocean.dwavesys.com/projects/minorminer) embedding tool to improve the embedding. \n",
     "\n",
